kube-config/ingress-traefik.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: traefik-ingress
  name: traefik-ingress-controller
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-ingress
  template:
    metadata:
      labels:
        app: traefik-ingress
        name: traefik-ingress
    spec:
      containers:
      - args:
        - "--etcd"
        - "--etcd.endpoint=etcd-client.etcd.svc.cluster.local:2379"
        - "--etcd.prefix=/traefik"
        - "--acme"
        - "--acme.tlschallenge"
        - "--etcd.useapiv3"
        - "--acme.acmelogging"
        - "--acme.onhostrule"
        - "--acme.email=jburns867@gmail.com"
        - "--acme.entrypoint=https"
        - "--acme.storage=traefik/acme/account"
        # Please note that this is the staging Let's Encrypt server.
        # Once you get things working, you should remove that whole line altogether.
        - "--acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory"
        image: traefik:1.7.12
        name: traefik-ingress
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 8080 # Default port for /ping
          name: traefik
          protocol: TCP
        - containerPort: 443
          name: websecure
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
      nodeSelector:
        type: entry
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60

---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: kube-system
spec:
  selector:
    app: traefik-ingress
  ports:
  - protocol: TCP
    port: 80
    nodePort: 30666 # Standard port, shouldn't change
    name: web
  - protocol: TCP
    port: 443
    nodePort: 30777 # Standard port, shouldn't change
    name: websecure
  type: NodePort
