kube-config/whoami-example.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: whoami

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: whoami-deployment
  namespace: whoami
spec:
  replicas: 3
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami-container
        image: containous/whoami

---
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
  namespace: whoami
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: whoami

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: whoami-service
  namespace: whoami
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
    ingress.kubernetes.io/custom-request-headers: "l5d-dst-override: whoami-service.default.svc.cluster.local:80"
    ingress.kubernetes.io/custom-response-headers: "l5d-remote-ip: || l5d-server-id:"
    traefik.ingress.kubernetes.io/auth-type: "basic"
    traefik.ingress.kubernetes.io/auth-secret: "mysecret"
spec:
  rules:
  - http:
      paths:
      - path: /whoami
        backend:
          serviceName: whoami-service
          servicePort: http
